--- a/setInterval/style.css
+++ b/setInterval/style.css
@@ -2,6 +2,10 @@
     width: 100%;
     padding: 20px;
     margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .colors-container{
     width: 350px;
@@ -9,6 +13,10 @@
     box-shadow: 0 0 3px #2b2d42;
     margin: 10px auto;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid white;
 }
 .btns-container{
     display: flex;
@@ -18,7 +26,7 @@
     
 }
 
-.btn-start, .btn-stop{
+.btn-start, .btn-stop, .btn-clear{
     padding: 5px 10px;
     cursor: pointer;
     border: none;
@@ -26,6 +34,11 @@
     border-radius: 5px;
     transition: .4s;
 }
+.btn-clear{
+    width: 350px;
+    margin: 20px auto;
+}
+
 .btn-start:hover{
     background-color:#dde5b6 ;
 }
